fix lang bar hiding behind navbar

--- a/styles/bnl/stylesheets/scss/_header.scss
+++ b/styles/bnl/stylesheets/scss/_header.scss
@@ -278,7 +278,7 @@
             }
         }
         &--secondary {
-            z-index: 1;
+            z-index: 3;
             #{ $self }-item {
                 #{ $self }-item-link {
                     font-size: 14px;
